[package]
name = "htv-rs"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/xsbee/neo-libido"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
reqwest = { version = "0.11.14", features = ["json", "blocking"] }
clap = { version = "4.2.4", features = ["derive"] }